[package]
name = "rust-openai-lib"
version = "0.1.0"
edition = "2021"
description = "A Rust library for OpenAI API integration"
license = "MIT"
repository = "https://github.com/your-username/rust-openai-lib"
homepage = "https://your-username.github.io/rust-openai-lib"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

[dev-dependencies]
